drafting price scraper

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+InfluxDBClient = "7a087161-7d97-4627-bbdd-0c82161d9408"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 OAuth = "22d8b318-f366-56fb-a292-a93f7d76c017"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
