--- a/Project.toml
+++ b/Project.toml
@@ -11,9 +11,11 @@ HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 InfluxDBClient = "7a087161-7d97-4627-bbdd-0c82161d9408"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 OAuth = "22d8b318-f366-56fb-a292-a93f7d76c017"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
+ProgressMeter = "1.10.2"
 julia = "1.6.7"
 
 [extras]
