--- a/Project.toml
+++ b/Project.toml
@@ -9,8 +9,10 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Folds = "41a02a25-b8f0-4f67-bc48-60067656b558"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 InfluxDBClient = "7a087161-7d97-4627-bbdd-0c82161d9408"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 OAuth = "22d8b318-f366-56fb-a292-a93f7d76c017"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -18,6 +20,8 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 Folds = "0.2.10"
+HiGHS = "1.13.0"
+JuMP = "1.23.6"
 ProgressMeter = "1.10.2"
 StatsBase = "0.34.4"
 julia = "1.6.7"
